--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script async src="//www.instagram.com/embed.js"></script>
     <link
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     rel="stylesheet"
@@ -44,4 +45,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <script async src="//www.instagram.com/embed.js"></script>
 </html>
