--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script async src="//www.instagram.com/embed.js"></script>
+    <script
+      async
+      src="https://platform.twitter.com/widgets.js"
+      charset="utf-8"
+    ></script>
+    <script async src="https://www.instagram.com/embed.js"></script>
     <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
-    rel="stylesheet"
-  />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
@@ -45,5 +50,12 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
-  <script async src="//www.instagram.com/embed.js"></script>
+  <script async src="https://www.instagram.com/embed.js"></script>
+  <script
+    async
+    src="https://platform.twitter.com/widgets.js"
+    charset="utf-8"
+  ></script>
+  <script src="https://www.google.com/recaptcha/api.js"></script>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
 </html>
